tests/cases/compiler-development/artifact/errors/diagnostic-loop-continue-live-owner.diagnostic
diagnostic error code=O0001 family=ownership message="owning binding 'token' must be moved or dropped before continue" sources=1 labels=1 notes=0 helps=0
  Source source_id=0 kind=file path="tests/cases/compiler-development/artifact/errors/diagnostic-loop-continue-live-owner.ari" display="tests/cases/compiler-development/artifact/errors/diagnostic-loop-continue-live-owner.ari" bytes=94
  Label index=0 role=primary source_id=0 source="tests/cases/compiler-development/artifact/errors/diagnostic-loop-continue-live-owner.ari" line=4 column=5 end_line=4 end_column=13 byte_start=66 byte_end=74 message=""
  Snippet label=0 text="  --> tests/cases/compiler-development/artifact/errors/diagnostic-loop-continue-live-owner.ari:4:5\n   |\n 4 |     continue;\n   |     ^^^^^^^^"
